--- a/pagina1.html
+++ b/pagina1.html
@@ -7,7 +7,7 @@
 
 <h1>Estas en la otra página</h1>
 
-<p>Estoy usando github coo hosting para mi web</p>
+<p>Estoy usando github  para hosting de mi web</p>
 
 <a href="index.html">Volver a la página principal</a>
 
