--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <body>
 <a href="pagina1.html">Visita mi otra página</a>
-
+<a href="pagina2.html">Visita mi página añadida</a>
 <h1>Esta es mi web</h1>
 
 
