--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
 
 
 <body>
-<a href="pagina1.html">Visita mi otra página</a><br>
-<a href="pagina2.html">Visita mi página añadida</a>
+
+
 <h1>Esta es mi web</h1>
+<a href="pagina1.html">Visita mi otra página</a><br>
+<p>Esta es mi primera página web</p>
+<a href="pagina2.html">Visita mi página añadida</a>
+<p>Esta es mi segunda página web</p>
+
 
 
 </body>
